# polymarket-agents

./: .gitignore  CLAUDE.md  README.md  agents.example.yaml  main.py  pyproject.toml
.calfkit_agents/: aggressive.md  backtest.md  default.md
docs/: polymarket-bitcoin-updown.md
polymarket_agents/agents/: trader.py
polymarket_agents/config/: loader.py  models.py
polymarket_agents/domain/: models.py
polymarket_agents/infrastructure/: candle_format.py  coinbase_client.py  historical_candles.py  model_factory.py  paper_trading.py  polymarket_client.py  polymarket_ws.py
polymarket_agents/tools/: _balance.py  backtest.py  contrarian.py  tools.py  toolsets.py
scripts/: dashboard.py  format_history.py  run_agents.py  run_backtest.py  run_client.py  run_tools.py
