[project]
name = "polymarket-agents"
version = "0.1.0"
description = "Realtime, low-latency Calfkit agents trading on Polymarket's Bitcoin up/down markets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "calfkit>=0.2.4",
    "pyyaml>=6.0.3",
    "websockets>=13.0",
    "pydantic-settings>=2.0",
    "sympy>=1.13",
    "httpx>=0.28.1",
    "streamlit>=1.56.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "streamlit-autorefresh>=1.0.1",
    "tiktoken>=0.12.0",
    "faker>=40.13.0",
]
